--- a/app/styles/ui/check-runs/_ci-check-run-list-item.scss
+++ b/app/styles/ui/check-runs/_ci-check-run-list-item.scss
@@ -59,13 +59,11 @@
     color: var(--text-secondary-color);
     font-weight: var(--text-secondary-color);
     font-size: var(--font-size-sm);
-    line-height: 9px;
+    line-height: 1.4;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-
-    width: 250px;
-    height: 12px;
+    max-width: 100%;
   }
 
   &.button-component {
